# pcem

./: CHANGELOG.md  CMakeLists.txt  README.md  Readme-LINUX.txt  build.sh  configure  configure.ac  install-deps.sh  readme.txt  whpx_steps.txt
.github/workflows/: create-release.yml  test-debug-builds.yml  test-release-builds.yml  test-relwithdebinfo-builds.yml
cmake/: debugdefines.cmake
docs/: HDA_NOTES.md  awe64_notes.md  cs-dynarec-log.md  cs-inicializace-dynrecompiler.md  cs-pridani-whpx.md  cs-whpx-far-plan.md  cs-whpx-log-sablona.md  cs-whpx-pamet.md  ct3dse_test.md  logging-unification-plan.md  soundblaster_mame_comparison.md
includes/: includes.cmake
includes/private/: cpu_backend.h  cpu_debug.h  filters.h  ibm.h  whpx.h
scripts/: bench_kvm.sh
src/: CMakeLists.txt  Makefile.am  Makefile.in  codegen_allocator.c  codegen_allocator.h  codegen_backend.c  codegen_backend.h  codegen_backend_x86-64.c  cpu_backend.c  cpu_backend.h  disc.c  disc.h  fdc.c  globals.c  ibm.h  ide.c  io.c  jit_cache.c  jit_cache.h  keyboard.c  keyboard.h  keyboard_amstrad.c  keyboard_amstrad.h  keyboard_at.c  keyboard_at.h  keyboard_olim24.c  keyboard_olim24.h  keyboard_pcjr.c  keyboard_pcjr.h  keyboard_xt.c  keyboard_xt.h  pc.c  pit.h  scsi_53c400.c  scsi_aha1540.c  sound_adlibgold.c  vid_s3.c  whpx.c  whpx.h  wx-sdl2.c
src/codegen/: codegen.cmake  codegen_allocator.c  codegen_block.c  codegen_cache.c
src/cpu/: 808x.c  cpu.c  cpu.cmake  cpu_backend.c  cpu_debug.c  whpx.c  (+2 more)
tools/: CMakeLists.txt  check-whpx.c  compare_logs.py  cpu_state_stub.c  load-bios-whpx.c  pclog-stub.c
(+42 files in other folders)
